syntax = "proto3";

option csharp_namespace = "GrpcServer";

package licensecommunication;

service LicenceCommunication {
	rpc SubscribeToLicenceUpdates(EmptyRequest) returns (stream LicenceFileUpdate);
	rpc AddUnregisteredDevice(AddUnregisteredDeviceRequest) returns (AddUnregisteredDeviceResponse);
	rpc ValidateLicence(LicenceRequest) returns (LicenceResponse);
}

message EmptyRequest {}

message LicenceFileUpdate {
	string licence_file_xml = 1;
}

message AddUnregisteredDeviceRequest {
	string device_uuid = 1;
}

message AddUnregisteredDeviceResponse {
	bool success = 1;
	string message = 2;
}

message LicenceRequest {
	string license_xml = 1;
}

message LicenceResponse {
	bool is_valid = 1;
	string message = 2;
	string expiration_date = 3;
}